--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.2.0",
     "@remixicon/react": "^4.2.0",
+    "appwrite": "^16.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
