--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@next/third-parties": "^15.0.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@remixicon/react": "^4.2.0",
     "@t3-oss/env-nextjs": "^0.11.1",
@@ -17,7 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
-    "next": "14.2.13",
+    "next": "^15.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
